...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--About-->
        <scene sceneID="wg7-f3-ORb">
            <objects>
                <viewController storyboardIdentifier="sbAbout" title="About" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8rJ-Kc-sve" userLabel="About" customClass="AboutViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                        <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="716"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LID-WP-t9i">
                                <rect key="frame" x="-4" y="64" width="383" height="652"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqS-DY-f9p" userLabel="txt1">
                                        <rect key="frame" x="48.5" y="105" width="286" height="109"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txt1" label="txt1"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="109" id="htY-58-I3n"/>
                                        </constraints>
                                        <string key="text">The Celts considered numbers very important, even in some instances,  There is evidence that the Druids used numbers to represent certain ideas.</string>
...
